--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,184 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.great-idea{
+	width: 876px;
+    margin: 0 auto;
+   
+}
+.navigate{
+	
+	width:876px;
+	display: flex;
+	justify-content:space-between;
+	align-items: center;
+	background:gray;
+	position: fixed;
+  	
+  	z-index: 999;
+}
+.navigate nav{
+	width:60%;
+	display: flex;
+	justify-content:space-evenly;
+}
+.navigate nav a{
+	
+	color: gray;
+	text-decoration: none;
+	text-align: center;
+	background: yellow;
+	
+}
+
+.navigate nav a:hover{
+	background:skyblue;
+	color:black;
+}
+
+.title{
+	
+	height:500px;
+	border-bottom:2px solid black;
+	display: flex;
+	align-items: center;
+}
+h1{
+	font-size: 70px;
+}
+ .box2{
+	width:50%;
+	height:420px;
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+} 
+.letter{
+	width:70%;
+	
+	margin:50px 0 0 0;
+	 display:flex;
+	flex-direction: column;
+	align-items: center; 
+	text-align: center;
+}
+.button{
+	width:150px;
+	height:30px;
+	border:1px solid black;
+	padding:5px;
+	margin:10px auto;
+	text-align: center;
+}
+.button a{
+	font-size: 15px;
+	text-decoration: none;
+}
+.circle{
+	width:50%;
+	height:420px;
+	display: flex;
+	align-items: center; 
+}
+
+h4{
+	font-size: 20px;
+}
+.p1-box{
+	
+	height:150px;
+	
+	display: flex;
+	align-items: center; 
+}
+.p1-box1{
+	width:50%;
+	height:120px;
+	display: flex;
+	flex-direction: column;
+	
+	
+}
+.p1-box2{
+	width:50%;
+	height:120px;
+	display: flex;
+	flex-direction: column;
+	
+}
+.p2-box{
+	
+	height:220px;
+	border-bottom:2px solid black;
+	display: flex;
+	align-items: center; 
+	
+}
+.p2-box1{
+	width:33%;
+	height:190px;
+	
+	display: flex;
+	flex-direction: column;
+}
+.p2-box2{
+	width:33%;
+	height:190px;
+	
+	display: flex;
+	flex-direction: column;
+}
+.p2-box3{
+	width:33%;
+	height:190px;
+	
+	display: flex;
+	flex-direction: column;
+}
+.contact-info {
+	
+	padding: 20px 0;
+  }
+  footer p{
+	font-size:14px;
+	text-align: center;
+  }
+
+
+/* CSS ---- services.html*/
+
+  .services-header-img{
+	width: 100%;
+	margin:40px 0 0 0 ;
+}
+
+.Services-services{
+	width: 100%;
+	height: 120px;
+	padding: 20px 0 20px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content:space-between;
+	border-bottom:2px solid black;
+}
+
+.Services-items{
+	width: 100%;
+	height: 800px;
+	display: flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+	align-content:space-around;
+	border-bottom:2px solid black;
+}
+
+.items{
+	padding:25px;
+	width: 420px;
+	height: 220px;
+	border: 1px solid black;
+	background:lightgray;
+	display: flex;
+	flex-direction: column;
+	justify-content:space-evenly;
+}
